<resources>

    <string name="app_name">OC UI F12</string>
    <string name="email">email</string>
    <string name="enter_email">Enter your email</string>
    <string name="button_signup">sign up</string>
    <string name="enter_password">Enter your password</string>
    <string name="password">password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="goArrow">Go arrow</string>
    <string name="bar">Separator bar</string>
    <string name="login">login</string>
    <string name="resetNotify">Reset password email sent</string>
    <string name="opencomm">OpenComm</string>
    <string name="dashboard_contacts">contacts</string>
    <string name="dashboard_conferences">conferences</string>
    <string name="dashboard_accounts">accounts</string>
    <string name="dashboard_logout">logout</string>
    <string name="reset_password">reset password</string>
    <string name="sign_up">sign up</string>
    <string name="send_email">send email</string>
    <string name="send">send</string>
    <string name="desc">Generic description for image</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_splash_view">SplashView</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="conferenceTitle">conferenceTitle</string>
    <string name="startTime">startTime</string>
    <string name="invited">invited</string>
    <string name="loading_extended">loading&#8230;</string>
    <string name="todo_need_to_write_a_content_desc">TODO - Need to write a content desc</string>
    <string name="new_account">new account</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="confirm_password">confirm password</string>
    <string name="title">title</string>
    <string name="photo">photo</string>
    <string name="invalid_first_name">Invalid First Name</string>
    <string name="invalid_last_name">Invalid Last Name</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="contacts">Contacts</string>
    <string name="contacts_back_button_desc">Back to Dashboard</string>
    <string name="contacts_search_button_desc">Search Contacts</string>
    <string name="contact_search_title">contacts</string>
    <string name="contact_name_sample">A Contact Name</string>
    <string name="contact_default_picture_desc">Default Picture</string>
    <string name="add_conference_button_desc">Create Conference</string>
    <string name="conference_scheduling_conference_text">conferences</string>
    <string name="change_date_left_arrow_desc">Previous Date</string>
    <string name="change_date_right_arrow_desc">Next Date</string>
    <string name="conference_open_icon">Open More Conference Information</string>
    <string name="happening_now">happening now</string>
    <string name="upcoming">upcoming</string>
    <string name="go_to_conference_button_desc">Go to conference</string>
    <string name="invite">invite</string>
    <string name="sendhere">send here</string>
    <string name="description">description</string>
    <string name="date_and_time">date &amp; time</string>
    <string name="recurring">recurring</string>
    <string name="invited_by">invited_by</string>
    <string name="attendees">attendees</string>
    <string name="to">to</string>
    <string name="accept">accept</string>
    <string name="decline">decline</string>
    <string name="enter_conference">enter conference</string>
    
</resources>