<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/off_white" >
    
    <LinearLayout 
        android:layout_marginTop="16dp"
        android:layout_width="fill_parent"
        android:layout_height="263.33dp"
        android:orientation="vertical"
        android:background="@color/dark_grey">
        <TextView android:id="@+id/textLabelEmail"
 		    android:layout_marginTop="5dp"
 		    android:layout_marginLeft="46.67dp"
 		    android:layout_width="226.67dp"
 		    android:layout_height="52.33dp"
 		    android:text="@string/email"
 		    android:textSize="38sp"
 		    android:textColor="@color/orange"/>
        <EditText android:id="@+id/editTextEmail" 
			android:layout_marginTop="6dp"
			android:layout_marginLeft="46.67dp" 
			android:layout_width="226.67dp"
			android:layout_height="36dp"
			android:hint="" 
			android:textSize="32sp"/>
 		<TextView android:id="@+id/textLabelPassword"
 		    android:layout_marginTop="24.33dp"
 		    android:layout_marginLeft="46.67dp"
 		    android:layout_width="226.67dp"
 		    android:layout_height="52.33dp"
 		    android:text="@string/password"
 		    android:textSize="38sp"
 		    android:textColor="@color/blue"/>
        <EditText android:id="@+id/editTextPassword"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="46.67dp"
            android:layout_width="226.67dp"
            android:layout_height="36dp"
            android:hint=""
            android:textSize="32sp"/>
        <Button
            android:layout_marginTop="2.67dp"
            android:layout_marginLeft="40.67dp"
            android:layout_width="156.67dp"
            android:layout_height="20dp"
            android:text="@string/forgot_password"
            android:textColor="@color/off_white"
            android:textSize="14sp"
            android:background="@color/dark_grey"/>
    </LinearLayout>
    
    <Button android:id="@+id/signupButton"
		android:layout_marginTop="22.67dp"
      	android:layout_width="fill_parent"
        android:layout_height="58dp"
        android:text="@string/button_signup"
        android:textColor="@color/green"
        android:textSize="38sp"
        android:gravity="center_vertical"
        android:paddingLeft="46.67dp"
        android:background="@color/dark_grey"/>
    
    <ImageView
        android:layout_marginTop="22.67dp"
    	android:layout_width="fill_parent"
		android:layout_height="8dp"
    	android:src="@drawable/separator_bar"
		android:contentDescription="@string/bar"/>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="92dp"
        android:orientation="horizontal"
        android:background="@color/dark_grey">
        <ImageView android:id="@+id/loginButton"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:src="@drawable/arrow"
            android:contentDescription="@string/goArrow"
            android:background="@color/dark_grey"/>
        <Button android:id="@+id/loginText"
            android:layout_width="228dp"
            android:layout_height="92dp"
            android:text="@string/login"
            android:textColor="@color/off_white"
            android:textSize="38sp"
            android:gravity="center_vertical"
            android:paddingLeft="9.33dp"
            android:background="@color/light_grey"/>
    </LinearLayout>
</LinearLayout>

