
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/black" >
		<RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="13.33dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@color/black" >
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/conference_title_bar"
            android:layout_width="fill_parent"
            android:layout_height="36.67dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="13.33dp"
            android:background="@color/dark_grey_translucent" >

            <TextView
                android:id="@+id/opencomm_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10.67dp"
                android:text="@string/opencomm"
                android:textSize="18.67sp" />

            <ImageView
                android:id="@+id/add_conference_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_toRightOf="@+id/opencomm_title"
                android:src="@drawable/add_conference"
                android:contentDescription="@string/add_conference_button_desc" />

            <ImageView
                android:id="@+id/change_date_left_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/add_conference_button"
                android:layout_marginLeft="15.33dp"
                android:src="@drawable/blue_arrow_left"
                android:contentDescription="@string/change_date_left_arrow_desc" />
            
            <TextView
                android:id="@+id/date"
                android:background="@color/off_white"
                android:layout_width="50.67dp"
                android:layout_height="fill_parent"
                android:layout_marginTop="5.33dp"
                android:layout_marginBottom="5.33dp"
                android:layout_marginLeft="4.67dp"
                android:layout_marginRight="4.67dp"
                android:layout_toRightOf="@+id/change_date_left_arrow"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="5/14"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <ImageView
                android:id="@+id/change_date_right_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="4.67dp"
                android:layout_toRightOf="@+id/date"
                android:src="@drawable/blue_arrow_right" 
                android:contentDescription="@string/change_date_right_arrow_desc" />

        </RelativeLayout>
        <RelativeLayout
		    	android:id="@+id/conference_separator_happening_now"
                android:layout_width="fill_parent"
                android:layout_height="13.33dp"
                android:layout_below="@+id/conference_title_bar"
                android:orientation="vertical"
                android:background="@color/black" 
                android:visibility="gone">
            <TextView
                android:id="@+id/conference_separator_happening_now_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="2.67dp"
                android:layout_alignParentBottom="true"
                android:text="@string/happening_now"
                android:textColor="@color/orange"
                android:textSize="8sp" />
        </RelativeLayout>
        <ExpandableListView
        	android:id="@+id/conferences_list_happening_now"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/conference_separator_happening_now" 
			android:groupIndicator="@null" >
		</ExpandableListView>
		<RelativeLayout
		    	android:id="@+id/conference_separator_upcoming"
                android:layout_width="fill_parent"
                android:layout_height="13.33dp"
                android:layout_below="@+id/conferences_list_happening_now"
                android:orientation="vertical"
                android:background="@color/black" 
                android:visibility="gone">
            <TextView
                android:id="@+id/conference_separator_upcoming_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="2.67dp"
                android:layout_alignParentBottom="true"
                android:text="@string/upcoming"
                android:textColor="@color/blue"
                android:textSize="8sp" />
        </RelativeLayout>
        <ExpandableListView
        	android:id="@+id/conferences_list_upcoming"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/conference_separator_upcoming" 
			android:groupIndicator="@null" >
		</ExpandableListView>
    </RelativeLayout>
