<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullFrame"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/off_white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/emailBox"
        android:layout_width="fill_parent"
        android:layout_height="140dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="66dp"
        android:background="#333333" >
        <TextView
            android:id="@+id/emailTheText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="46dp"
            android:layout_marginTop="10.67dp"
            android:text="email"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFAB63"
            android:textSize="38dp"
            android:textStyle="normal"
            android:typeface="normal"
            tools:ignore="HardcodedText" />
        <EditText
            android:id="@+id/emailTextBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/emailTheText"
            android:layout_below="@+id/emailTheText"
            android:ems="10"
            android:height="10dp"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:width="235dp" >

            <requestFocus />
        </EditText>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/signUp"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/emailBox"
        android:layout_marginTop="22dp"
        android:background="#333333" >
        <TextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="48dp"
            android:text="@string/sign_up"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#AEE278"
            android:textSize="38dp"
            android:textStyle="normal"
            android:typeface="normal" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/resetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/signUp"
        android:layout_marginTop="130dp"
        android:background="#878787" >

        <ImageView
            android:id="@+id/resetButtonImage"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:contentDescription="When pressed goes to the reset page"
            android:onClick="goToReset"
            android:scaleType="fitXY"
            android:src="@drawable/go_to_conf_button"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/resetPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/resetButtonImage"
            android:text="@string/reset_password"
            android:textColor="#FFFFFF"
            android:textSize="38dp" />

    </RelativeLayout>
    <ImageView
        android:id="@+id/separatorBar"
        android:layout_width="fill_parent"
        android:layout_height="8dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/signUp"
        android:layout_marginTop="122dp"
        android:background="#333333"
        android:scaleType="fitXY"
        android:src="@drawable/separator_bar"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/actionBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/dark_grey" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="160dp"
            android:layout_height="35.33dp"
            android:background="@color/dark_grey"
            android:contentDescription="@string/desc"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:scaleType="centerInside"
            android:src="@drawable/logo_oneline" />

    </LinearLayout>

</RelativeLayout>